force-app/main/default/objects/Articles__c/Articles__c.object-meta.xml
<CustomObject>
    <label>Article demandé</label>
    <nameField>
        <label>Article : Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Articles demandés</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>