force-app/main/default/objects/Articles__c/fields/Article_Nom1__c.field-meta.xml
<CustomField>
    <fullName>Article_Nom1__c</fullName>
    <label>Article : Nom</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Articles demandés</relationshipLabel>
    <relationshipName>Articles_demand_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>