force-app/main/default/objects/Articles__c/fields/Demande__c.field-meta.xml
<CustomField>
    <fullName>Demande__c</fullName>
    <label>Demande</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Articles demandés</relationshipLabel>
    <relationshipName>Articles_demand_s</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>