force-app/main/default/objects/Articles__c/fields/M_tier__c.field-meta.xml
<CustomField>
    <fullName>M_tier__c</fullName>
    <formula>IF (INCLUDES (Article_Nom1__r.M_tiers__c, &apos;Value1&apos;), &apos;Value1&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Métier</label>
    <type>Text</type>
</CustomField>