force-app/main/default/objects/Articles__c/fields/quantite__c.field-meta.xml
<CustomField>
    <fullName>quantite__c</fullName>
    <label>Quantité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>