force-app/main/default/objects/Articles__c/fields/Taille__c.field-meta.xml
<CustomField>
    <fullName>Taille__c</fullName>
    <label>Taille</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
            <value>
                <fullName>39</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>41</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>TU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>