force-app/main/default/objects/Articles__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF (INCLUDES (Article_Nom1__r.Type__c, &apos;Value1&apos;), &apos;Value1&apos;, &apos;Other&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>