force-app/main/default/objects/Articles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Article_Nom1__c</columns>
    <columns>Demande__c</columns>
    <columns>quantite__c</columns>
    <columns>Taille__c</columns>
    <columns>Type__c</columns>
    <columns>M_tier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>